syntax = "proto3";

option go_package = "/pb";

service Match {
  rpc Match (MatchRequest) returns (MatchReply) {}
}

message MatchRequest {
  int64 fromID = 1;
  int64 toID = 2;
  int64 sphereID = 3;
  bool isLike = 4;
}

message MatchReply {
  bool isReciprocated = 1;
}
